--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,18 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
+#__next {
+  display: grid;
+  padding: 2rem;
+  grid-template-rows: auto 1fr;
+}
+
 a {
   color: inherit;
   text-decoration: none;
